задає макс брекпойнт 1280

--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,6 +1,7 @@
 .head-container {
     /*position: relative;*/
-    padding-top: 0;
+    padding: 0;
+
 
     height: 502px;
 
@@ -9,14 +10,14 @@
     
     background-color: $accent-color;
 
-    @media screen  and (min-width:1200px){
-        padding-top: 0;
+    @media screen  and (min-width:1280px){
+        padding: 0;
         height: 665px;       
      
     }
 
-    @media screen  and (min-width:768px) and (max-width:1199px) {
-        padding-top: 0;
+    @media screen  and (min-width:768px) and (max-width:1279px) {
+        padding: 0;
         padding-right: 34px;
 
         height: 399px;
@@ -40,7 +41,7 @@
             background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
     }
 
-    @media screen and (min-width:768px) and (max-width:1199px){
+    @media screen and (min-width:768px) and (max-width:1279px){
         width: 768px;
         padding-top: 37px;
 
@@ -71,21 +72,7 @@
         }
     
     }
-    @media screen and (min-width:1200px) {
-        width: 1200px;
-        padding-top: 37px;
-        padding-right: 115px;
-    
-        background-image: url('./../images/hero/icecream_desktop.png'), url('./../images/hero/ellipse_desktop.png');
-        background-repeat: no-repeat;
-        background-position: top 108px right 450px, top 55px right 267px;
-        
-        @media screen and (min-device-pixel-ratio: 2),
-            screen and (min-resolution: 192dpi),
-            screen and (min-resolution: 2dppx) {
-                    background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
-        }
-    }
+   
 }
 
 .nav {    
@@ -98,14 +85,16 @@
 
     height: 56px;
 
-    @media screen  and (min-width:768px){
+    @media screen  and (min-width:1280px){
+        padding-right: 0px;
+         
+     }
+
+    @media screen  and (min-width:768px) and (max-width:1279px){
         padding-right: 19px;
         padding-left: 19px;
     }
-    @media screen  and (min-width:768px){
-       padding-right: 0px;
-        
-    }
+   
   
 }
 
@@ -124,7 +113,7 @@
     justify-content: center;
     align-items: center;
 
-    @media screen  and (min-width:1200px){
+    @media screen  and (min-width:1280px){
         display: none;
     }
 }
@@ -160,7 +149,7 @@
                 margin-left: 12px;
             }
         }
-        @media screen  and (min-width:1200px){
+        @media screen  and (min-width:1280px){
             margin-right: 0px;
         }
     }
@@ -241,7 +230,7 @@
         transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transition-delay: 450ms;
 
-        @media screen  and (min-width:1200px){
+        @media screen  and (min-width:1280px){
             display: none;
         }
                    
@@ -289,15 +278,12 @@
 .site-nav {
     display: none;
 
-    @media screen  and (min-width:1200px){
+    @media screen  and (min-width:1280px){
         display: flex;
     }
 }
 
 .nav-item:not(:last-child) {
-    margin-right: 30px;
+    margin-right: 35px;
 
-    @media screen  and (min-width:1210px){
-        margin-right: 35px;
-    }
 }
