--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -210,7 +210,7 @@ h6 {
 
 .head-container {
   /*position: relative;*/
-  padding-top: 0;
+  padding: 0;
   height: 502px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -221,16 +221,16 @@ h6 {
   background-color: #ffb8ca;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .head-container {
-    padding-top: 0;
+    padding: 0;
     height: 665px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .head-container {
-    padding-top: 0;
+    padding: 0;
     padding-right: 34px;
     height: 399px;
   }
@@ -251,7 +251,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .above-container {
     width: 768px;
     padding-top: 37px;
@@ -261,7 +261,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (max-width: 1279px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1279px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1279px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1279px) and (min-resolution: 2dppx) {
   .above-container {
     background-image: url("./../images/hero/icecream_tablet@2x.png"), url("./../images/hero/ellipse_tablet@2x.png");
   }
@@ -284,23 +284,6 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .above-container {
-    width: 1200px;
-    padding-top: 37px;
-    padding-right: 115px;
-    background-image: url("./../images/hero/icecream_desktop.png"), url("./../images/hero/ellipse_desktop.png");
-    background-repeat: no-repeat;
-    background-position: top 108px right 450px, top 55px right 267px;
-  }
-}
-
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
-  .above-container {
-    background-image: url("./../images/hero/icecream_desktop@2x.png"), url("./../images/hero/ellipse_desktop@2x.png");
-  }
-}
-
 .nav {
   margin-left: auto;
   margin-right: auto;
@@ -316,16 +299,16 @@ h6 {
   height: 56px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1280px) {
   .nav {
-    padding-right: 19px;
-    padding-left: 19px;
+    padding-right: 0px;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .nav {
-    padding-right: 0px;
+    padding-right: 19px;
+    padding-left: 19px;
   }
 }
 
@@ -350,7 +333,7 @@ h6 {
           align-items: center;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .menu-btn {
     display: none;
   }
@@ -390,7 +373,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .buy-btn--nmob {
     margin-right: 0px;
   }
@@ -470,7 +453,7 @@ h6 {
           transition-delay: 450ms;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .mobile-menu.is-open {
     display: none;
   }
@@ -515,7 +498,7 @@ h6 {
   display: none;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -524,13 +507,7 @@ h6 {
 }
 
 .nav-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-@media screen and (min-width: 1210px) {
-  .nav-item:not(:last-child) {
-    margin-right: 35px;
-  }
+  margin-right: 35px;
 }
 
 .hero {
@@ -550,7 +527,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero {
     padding-top: 3px;
     padding-right: 0px;
@@ -564,13 +541,13 @@ h6 {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .title-block {
     padding-top: 3px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .title-block {
     padding-top: 84px;
     padding-left: 38px;
@@ -603,7 +580,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-title--accent {
     font-size: 58px;
   }
@@ -616,7 +593,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-title {
     font-size: 38px;
     line-height: 1.145;
@@ -636,7 +613,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-btn-block {
     margin-top: 25px;
   }
@@ -652,7 +629,7 @@ h6 {
   line-height: 1,25;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-btn-block .btn {
     margin-right: 15px;
     width: 102px;
@@ -671,7 +648,7 @@ h6 {
   line-height: 1,25;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .hero-btn-block .btn2 {
     width: 138px;
     height: 40px;
@@ -697,7 +674,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio {
     margin-top: 56px;
     height: 191px;
@@ -710,7 +687,7 @@ h6 {
   height: 124px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .milk {
     width: 188px;
     height: 191px;
@@ -735,7 +712,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio-eco {
     padding-bottom: 11px;
   }
@@ -755,7 +732,7 @@ h6 {
   border: none;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio-eco .btn-circle {
     width: 26px;
     height: 26px;
@@ -775,7 +752,7 @@ h6 {
   color: #ffffff;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .bio-eco-descr {
     margin-top: 0;
     margin-bottom: 20px;
@@ -790,7 +767,7 @@ h6 {
   width: 9px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .arrow-icon {
     width: 13px;
   }
@@ -806,7 +783,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .r-block {
     padding-top: 63px;
   }
@@ -832,7 +809,7 @@ h6 {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .sales-points {
     margin-bottom: 90px;
   }
@@ -860,21 +837,21 @@ h6 {
   border-radius: 50%;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points::before {
     width: 30px;
     height: 30px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points {
     width: 92px;
     height: 77px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points {
     height: 76x;
     /*padding-right: 18px;*/
@@ -894,7 +871,7 @@ h6 {
   color: #d41443;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points-number {
     font-size: 46px;
     line-height: 1.1521;
@@ -910,7 +887,7 @@ h6 {
   color: #ffffff;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .points-title {
     margin-top: 2px;
     font-size: 14px;
@@ -922,7 +899,7 @@ h6 {
   margin-bottom: 14px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .caffee {
     margin-bottom: 30px;
   }
@@ -934,7 +911,7 @@ h6 {
   height: 133px;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1280px) {
   .girl {
     width: 293px;
     height: 232px;
