--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -30,16 +30,19 @@
     padding-top: 6px;
     padding-left: 20px;
 
-   
-    background-image: url('./../images/hero/icecream_mob.png'), url('./../images/hero/ellipse_mob.png');
-    background-repeat: no-repeat;
-    background-position: left 117px bottom 0px, top 92px right 0px;
-    
-    @media screen and (min-device-pixel-ratio:2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-            background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
+    @media screen and (max-width:767px){
+        background-image: url('./../images/hero/icecream_mob.png'), url('./../images/hero/ellipse_mob.png');
+        background-repeat: no-repeat;
+        background-position: left 117px bottom 0px, top 92px right 0px;
+        
+        /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
+        }*/  
     }
+
+   
 
     @media screen and (min-width:768px) and (max-width:1279px){
         width: 768px;
@@ -50,12 +53,13 @@
         background-repeat: no-repeat;
         background-position: top 63px right 214px, top 31px right 103px;
         
-        @media screen and (min-device-pixel-ratio:2),
+        /*@media screen and (min-device-pixel-ratio:2),
             screen and (min-resolution: 192dpi),
             screen and (min-resolution: 2dppx) {
                     background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
-        }
+        }*/
     }
+
     @media screen and (min-width:1280px) {
         width: 1280px;
         padding-top: 37px;
@@ -65,13 +69,14 @@
         background-repeat: no-repeat;
         background-position: top 108px right 450px, top 55px right 267px;
         
-        @media screen and (min-device-pixel-ratio:2),
+        /*@media screen and (min-device-pixel-ratio:2),
             screen and (min-resolution: 192dpi),
             screen and (min-resolution: 2dppx) {
                     background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
-        }
+        }*/
     
     }
+  
    
 }
 
