--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -240,14 +240,18 @@ h6 {
   width: 320px;
   padding-top: 6px;
   padding-left: 20px;
-  background-image: url("./../images/hero/icecream_mob.png"), url("./../images/hero/ellipse_mob.png");
-  background-repeat: no-repeat;
-  background-position: left 117px bottom 0px, top 92px right 0px;
 }
 
-@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+@media screen and (max-width: 767px) {
   .above-container {
-    background-image: url("./../images/hero/icecream_mob@2x.png"), url("./../images/hero/ellipse_mob@2x.png");
+    background-image: url("./../images/hero/icecream_mob.png"), url("./../images/hero/ellipse_mob.png");
+    background-repeat: no-repeat;
+    background-position: left 117px bottom 0px, top 92px right 0px;
+    /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
+        }*/
   }
 }
 
@@ -258,12 +262,11 @@ h6 {
     background-image: url("./../images/hero/icecream_tablet.png"), url("./../images/hero/ellipse_tablet.png");
     background-repeat: no-repeat;
     background-position: top 63px right 214px, top 31px right 103px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1279px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1279px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1279px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1279px) and (min-resolution: 2dppx) {
-  .above-container {
-    background-image: url("./../images/hero/icecream_tablet@2x.png"), url("./../images/hero/ellipse_tablet@2x.png");
+    /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                    background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
+        }*/
   }
 }
 
@@ -275,12 +278,11 @@ h6 {
     background-image: url("./../images/hero/icecream_desktop.png"), url("./../images/hero/ellipse_desktop.png");
     background-repeat: no-repeat;
     background-position: top 108px right 450px, top 55px right 267px;
-  }
-}
-
-@media screen and (min-width: 1280px) and (min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1280px) and (min-resolution: 192dpi), screen and (min-width: 1280px) and (min-resolution: 2dppx) {
-  .above-container {
-    background-image: url("./../images/hero/icecream_desktop@2x.png"), url("./../images/hero/ellipse_desktop@2x.png");
+    /*@media screen and (min-device-pixel-ratio:2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                    background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
+        }*/
   }
 }
 
