--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -4,250 +4,239 @@
 }
 */
 .header-section {
+  position: relative;
 
-    position: relative;
+  width: auto;
 
-    width: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 
-    padding-left: 20px;
-    padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
 
-    margin-left: auto;
-    margin-right: auto;
+  @media screen and (min-width: 768px) {
+    padding-left: 34px;
+    padding-right: 34px;
+  }
 
-    @media screen and (min-width: 768px) {
-        padding-left: 34px;
-        padding-right: 34px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        padding-left: 46px;
-        padding-right: 115px;
-    }
+  @media screen and (min-width: 1200px) {
+    padding-left: 46px;
+    padding-right: 115px;
+  }
 }
 
 .header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 6px;
 
-    @media screen and (min-width: 768px) {
-        padding-top: 37px;
-    }
+  @media screen and (min-width: 768px) {
+    padding-top: 37px;
+  }
 }
 
 .header-link {
-    display: block;
-    width: 199px;
-
+  display: block;
+  width: 199px;
 }
 
 .header-button-menu {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 }
 
 .menu-button {
-    
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    border: none;
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  border: none;
 
-    background-color: transparent;
+  background-color: transparent;
 
-    @media screen and (min-width: 1200px) {
-        display: none;
-    }
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
 }
 
 .menu-button .menu-icon {
-    display: none;
+  display: none;
 }
 
 .menu-button.is-open .close-icon {
-    display: none;
+  display: none;
 }
 
 .menu-button.is-open .menu-icon {
-    display: block;
+  display: block;
 }
 
-
-
 .container-mobile {
+  display: block;
 
-    display: block;
-
-    @media screen and (min-width: 768px) {
-        display: none;
-    }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .header-menu-container {
-    display: block;
+  display: block;
 
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
 
-    height: 502px;
-    background-color: #E17992;
-    
-    padding-top: 60px;
+  height: 502px;
+  background-color: #e17992;
 
-    font-size: 20px;
+  padding-top: 60px;
 
-    &.is-open {
-        display: none;
-  
-    }
+  font-size: 20px;
 
+  &.is-open {
+    display: none;
+  }
 
-    @media screen and (min-width: 768px) {
-        width: 254px;
-        height: 1020px;
-    }
+  @media screen and (min-width: 768px) {
+    width: 254px;
+    height: 1020px;
+  }
 
-    @media screen and (min-width: 1200px) {
-        display: none;
-    }
-    
+  @media screen and (min-width: 1200px) {
+    display: none;
+  }
 }
 
-
 .icon {
-    display: inline-block;
+  display: inline-block;
 
-    background-color: #fff;
+  background-color: #fff;
+}
+
+.icon-open {
+  fill: #d41443;
+}
+
+.icon-close {
+  fill: #d41443;
+}
+
+.header-button-modal {
+  height: 46px;
+  width: 209px;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  border-radius: 22px;
+
+  background-color: #fff;
+  text-align: center;
+
+  &:hover,
+  &:focus {
+    background-color: #ecebeb;
   }
+}
 
-  .icon-open {
-    fill: #D41443;
+.header-add .header-buy-container {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: grid;
   }
+}
 
-  .icon-close {
-    fill: #D41443;
+.header-container > .header-navigation {
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    padding-top: 0;
   }
-
-  .header-button-modal {
-      height: 46px;
-      width: 209px;
-
-      margin-left: auto;
-      margin-right: auto;
-
-      border-radius: 22px;
-
-      background-color: #fff;
-      text-align: center;
-    
-    &:hover , &:focus {
-        background-color: #ECEBEB;
-    }
-  }
-
-  .header-add .header-buy-container {
-    display: none;
-
-    @media screen and (min-width: 768px) {
-        display: grid;
-    }
-  }
-
-  .header-container > .header-navigation {
-    display: none;
-
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        padding-top: 0;
-        
-    }
-  }
-
+}
 
 .header-buy-img {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
 
-    width: auto;
-    height: 44px;
+  width: auto;
+  height: 44px;
 }
 
 .header-buy-container {
-    display: grid;
+  display: grid;
 }
 
 .header-buy-container-pc {
-    display: none;
+  display: none;
 
-    @media screen and (min-width: 768px) {
-        display: block;
-        margin-left: 20px;  
-    }
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: 20px;
+  }
 }
 
 .header-navigation {
-    padding-top: 19px;
+  padding-top: 19px;
 }
 
 .header-link-navigation {
-    display: flex;
+  display: flex;
 }
 
 .header-item > a {
-    display: block;
+  display: block;
 
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 20px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 20px;
 
-    border-top: 1px solid #E18298;
-    border-bottom: 1px solid #E18298;
+  border-top: 1px solid #e18298;
+  border-bottom: 1px solid #e18298;
 
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.28;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.28;
 
-    color: #fff;
-    
-    @media screen and (min-width: 768px) {
-        padding-left: 24px;
-    }
+  color: #fff;
 
-    @media screen and (min-width: 1200px) {
-        color: #D41443;
+  @media screen and (min-width: 768px) {
+    padding-left: 24px;
+  }
 
-        padding-left: 35px;
+  @media screen and (min-width: 1200px) {
+    color: #d41443;
 
-        font-size: 16px;
-        line-height: 1.31;
+    padding-left: 35px;
 
-        border: none;
-    }
- }
+    font-size: 16px;
+    line-height: 1.31;
 
- .header-item {
-     height: 100%;
- }
-
-.header-add {
-    display: flex;
+    border: none;
+  }
 }
 
-  .header-text {
-    font-family: DM Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 1.3125;
-        
-    color: #D41443;
-  }
+.header-item {
+  height: 100%;
+}
+
+.header-add {
+  display: flex;
+}
+
+.header-text {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.3125;
+
+  color: #d41443;
+}
