відносний розмір меню додає

--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -222,7 +222,7 @@
 
     padding-bottom: 185px;
 
-    width: 250px;
+    width: 78.125%;
     height: 502px;
 
     background-color: #E17992;
@@ -242,7 +242,7 @@
     }     
     
     @media screen  and (min-width:768px){
-        width: 254px;
+        width: 33%;
         height: 1020px;
 
     }
