--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -439,7 +439,7 @@ h6 {
   -webkit-transition-delay: 450ms;
           transition-delay: 450ms;
   padding-bottom: 185px;
-  width: 250px;
+  width: 78.125%;
   height: 502px;
   background-color: #E17992;
 }
@@ -463,7 +463,7 @@ h6 {
 
 @media screen and (min-width: 768px) {
   .mobile-menu {
-    width: 254px;
+    width: 33%;
     height: 1020px;
   }
 }
