adds adaptive styles for hero section

--- a/src/partials/page-hero.html
+++ b/src/partials/page-hero.html
@@ -14,10 +14,12 @@
             <div class="hero-locations">
                 <ul class="locations-list">
                     <li class="locations-item">
-                        16 <p class="locations-text">cafes</p>
+                        <p class="locations-quantity">16</p>
+                        <p class="locations-text">cafes</p>
                     </li>
                     <li class="locations-item">
-                        23 <p class="locations-text">food trucks</p>
+                        <p class="locations-quantity">23</p>
+                        <p class="locations-text">food trucks</p>
                     </li>
                 </ul>
                 <!-- <picture>
