Финальная версия секции Продукты

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,67 +1,97 @@
-<section class="products">
+<section class="products-container">
     <div class="container">
-        <div class="products-title">
+        <div class="products">
             <h2 class="products-text-title">100% natural</h2>
             <h1 class="products-main-title">products</h1>
         </div>
         <ul class="products-flex list">
-            <li class="products-list">
+            <li class="products-box">
                 <div class="products-img">
-                    <img src="./images/product-icecream.png">
+                    <picture>
+                        <source srcset="./images/mobile/product-icecream.png 1x ./src/images/mobile/product-icecream.png@x2 2x"
+                            media="(max-width:767px)" />
+                        <source srcset="./images/tablet/product-icecream.png 1x ./src/images/tablet/product-icecream.png@x2 2x"
+                            media="(min-width:768px)" />
+                        <source srcset="./images/product-icecream.png 1x ./src/images/product-icecream.png@x2 2x"
+                            media="(min-width:1200px)" />
+                        <img src="./images/product-icecream.png" alt="icecream"/>
+                    </picture>
                 </div>
                 <div class="products-box-1">
                     <h2 class="products-text-title-card">ice cream</h2>
-                    <svg class="product-cards-svg" width="6" height="6">
-                        <use href="./images/svg/dot.svg"></use>
-                    </svg>
+                    <div class="products-dots">
+                        <span class="products-dots-view">...</span>
+                    </div>
                     <p class="product-cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt ut
                         labore et</p>
-                    <a href="">
-                        <svg class="product-cards-icon" width="40" height="40">
-                            <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
-                        </svg>
-                    </a>
+                    <div class="product-icon">
+                        <a class="product-icon-link" href="">
+                            <svg class="product-icon-svg">
+                                <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </li>
-            <li class="products-list">
+            <li class="products-box">
                 <div class="products-img">
-                    <img src="./images/product-icecoffee.png">
+                    <picture>
+                        <source srcset="./images/mobile/product-icecoffee.png 1x ./src/images/mobile/product-icecoffee.png@x2 2x"
+                            media="(max-width:767px)" />
+                        <source srcset="./images/tablet/product-icecoffee.png 1x ./src/images/tablet/product-icecoffee.png@x2 2x"
+                            media="(min-width:768px)" />
+                        <source srcset="./images/product-icecoffee.png 1x ./src/images/product-icecoffee.png@x2 2x"
+                            media="(min-width:1200px)" />
+                        <img src="./images/product-icecoffee.png" alt="icecoffe" />
+                    </picture>
                 </div>
                 <div class="products-box-2">
                     <h2 class="products-text-title-card">ice coffee</h2>
-                    <svg class="product-cards-svg" width="6" height="6">
-                        <use href="./images/svg/dot.svg"></use>
-                    </svg>
+                    <div class="products-dots">
+                        <span class="products-dots-view">...</span>
+                    </div>
                     <p class="product-cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt
                         ut
                         labore et</p>
-                    <a href="">
-                        <svg class="product-cards-icon" width="40" height="40">
-                            <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
-                        </svg>
-                    </a>
+                    <div class="product-icon">
+                        <a class="product-icon-link" href="">
+                            <svg class="product-icon-svg">
+                                <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </li>
-            <li class="products-list">
+            <li class="products-box">
                 <div class="products-img">
-                    <img src="./images/product-milkshake.png">
+                    <picture>
+                        <source srcset="./images/mobile/product-milkshake.png 1x ./src/images/mobile/product-milkshake.png@x2 2x"
+                            media="(max-width:767px)" />
+                        <source srcset="./images/tablet/product-milkshake.png 1x ./src/images/tablet/product-milkshake.png@x2 2x"
+                            media="(min-width:768px)" />
+                        <source srcset="./images/product-milkshake.png 1x ./src/images/product-milkshake.png@x2 2x"
+                            media="(min-width:1200px)" />
+                        <img src="./images/product-milkshake.png" alt="milkshake" />
+                    </picture>
                 </div>
                 <div class="products-box-3">
                     <h2 class="products-text-title-card">milkshakes</h2>
-                    <svg class="product-cards-svg" width="6" height="6">
-                        <use href="./images/svg/dot.svg"></use>
-                    </svg>
+                    <div class="products-dots">
+                        <span class="products-dots-view">...</span>
+                    </div>
                     <p class="product-cards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                         incididunt
                         ut
                         labore et</p>
-                    <a href="">
-                        <svg class="product-cards-icon" width="40" height="40">
-                            <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
-                        </svg>
-                    </a>
+                    <div class="product-icon">
+                        <a class="product-icon-link" href="">
+                            <svg class="product-icon-svg">
+                                <use href="./images/svg/sprite.svg#icon-arrow-right2"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </li>
         </ul>
