--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,13 +1,19 @@
+.products-container {
+  margin-top: 121px;
+  margin-bottom: 98px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 122px;
+    margin-bottom: 112px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 127px;
+    margin-bottom: 119px;
+  }
+}
+
 .products {
-  margin-top: 127px;
-  margin-bottom: 119px;
-}
-
-.products-title {
-  /*  padding-bottom: 49px; */
-}
-
-.products-text-title {
   font-family: 'Titan One';
   font-style: normal;
   font-weight: normal;
@@ -16,86 +22,250 @@
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: $advanced-bg;
+
+  &-text-title {
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.17;
+    color: $advanced-bg;
+    padding-bottom: 15px;
+
+    @media screen and (min-width: 768px) {
+      font-size: 26px;
+      line-height: 1.15;
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 30px;
+      line-height: 1.13;
+    }
+  }
+
+  &-main-title {
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 1.15;
+    letter-spacing: 0.06em;
+    color: $accent-color;
+
+    @media screen and (min-width: 768px) {
+      font-size: 48px;
+      line-height: 1.15;
+    }
+
+    @media screen and (min-width: 1200px) {
+      font-size: 58px;
+      line-height: 1.13;
+    }
+  }
 }
 
 .products-text-title-card {
   font-family: 'Titan One';
   font-style: normal;
   font-weight: normal;
-  font-size: 30px;
-  line-height: 1.13;
+  font-size: 20px;
+  line-height: 1.15;
   text-align: center;
+  color: $main-color;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: $main-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 20px;
+    line-height: 1.15;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 1.13;
+  }
 }
 
-.products-main-title {
-  font-family: 'Titan One';
-  font-style: normal;
-  font-weight: normal;
-  font-size: 58px;
-  line-height: 1.13;
-  text-align: center;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
-  color: $accent-color;
+.products-dots {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 32px;
+
+  &-view {
+    color: $main-color;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 1;
+  }
 }
 
-.products-list {
+.products-box {
   position: relative;
-  margin-top: 259px;
+  margin-top: 144px;
+
+  &-1 {
+    background-color: $main-bg;
+    border-radius: 24px;
+    width: 280px;
+    height: 485px;
+    padding-top: 160px;
+    padding-right: 40px;
+    padding-left: 40px;
+
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 485px;
+      padding-top: 152px;
+      padding-right: 11px;
+      padding-left: 11px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 329px;
+      height: 525px;
+      padding-top: 163px;
+      padding-right: 44px;
+      padding-left: 44px;
+    }
+  }
+
+  &-2 {
+    background-color: $main-coffee;
+    border-radius: 24px;
+    width: 280px;
+    height: 485px;
+    padding-top: 160px;
+    padding-right: 40px;
+    padding-left: 40px;
+
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 485px;
+      padding-top: 152px;
+      padding-right: 11px;
+      padding-left: 11px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 329px;
+      height: 525px;
+      padding-top: 163px;
+      padding-right: 44px;
+      padding-left: 44px;
+    }
+  }
+
+  &-3 {
+    background-color: $green-color;
+    border-radius: 24px;
+    width: 280px;
+    height: 485px;
+    padding-top: 160px;
+    padding-right: 40px;
+    padding-left: 40px;
+
+    @media screen and (min-width: 768px) {
+      width: 220px;
+      height: 485px;
+      padding-top: 152px;
+      padding-right: 11px;
+      padding-left: 11px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 329px;
+      height: 525px;
+      padding-top: 163px;
+      padding-right: 44px;
+      padding-left: 44px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-top: 150px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-top: 259px;
+  }
 }
 
 .products-img {
-  width: 337px;
-  height: 335px;
+  width: 249px;
+  height: 252px;
   position: absolute;
-  bottom: 400px;
-}
+  bottom: 346px;
+  left: 15px;
 
-.products-box-1 {
-  background-color: $main-bg;
-  border-radius: 24px;
-  width: 329px;
-  height: 525px;
-  padding-top: 163px;
-  padding-right: 44px;
-  padding-left: 44px;
-}
+  @media screen and (min-width: 768px) {
+    width: 220px;
+    height: 226px;
+    bottom: 363px;
+  }
 
-.products-box-2 {
-  background-color: $main-coffee;
-  border-radius: 24px;
-  width: 329px;
-  height: 525px;
-  padding-top: 163px;
-  padding-right: 44px;
-  padding-left: 44px;
-}
-
-.products-box-3 {
-  background-color: $green-color;
-  border-radius: 24px;
-  width: 329px;
-  height: 525px;
-  padding-top: 163px;
-  padding-right: 44px;
-  padding-left: 44px;
+  @media screen and (min-width: 1200px) {
+    width: 337px;
+    height: 335px;
+    bottom: 400px;
+  }
 }
 
 .product-cards-text {
   font-style: normal;
   font-weight: bold;
-  font-size: 16px;
-  line-height: 1.76;
+  font-size: 14px;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.04em;
   color: $main-color;
+
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+    line-height: 1.76;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 16px;
+    line-height: 1.76;
+  }
 }
 
 .products-flex {
+  display: block;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.product-icon {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  padding-top: 30px;
+
+  &-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: $main-color;
+    border-radius: 50%;
+  }
+
+  &-svg {
+    width: 13px;
+    height: 15px;
+    fill: $accent-color;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 62px;
+  }
 }
