--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,7 +4,7 @@
   padding-left: 20px;
   padding-right: 20px;
   @include for-size('mobile') {
-    width: 320px;
+    min-width: 320px;
   }
   @include for-size('tablet') {
     width: 768px;
