--- a/src/sass/hero/_hero-container.scss
+++ b/src/sass/hero/_hero-container.scss
@@ -76,8 +76,8 @@
 .btn-hero {
   font-family: $main-font;
   @include fonts(400, 8px, 1.25, 0em);
-  color: getColor('accent');
-  background-color: getColor('textLight');
+  color: getColor('textLight');
+  background-color: getColor('accent');
   border-radius: 20px;
   border-color: transparent;
   padding-left: 13px;
@@ -85,10 +85,25 @@
   height: 24px;
   margin-top: 20px;
 
+  // &:first-child {
+  //   background-color: getColor('accent');
+  // }
+
+  &:last-child {
+    background-color: getColor('textLight');
+    color: getColor('accent');
+  }
+
   &:hover,
   &:focus {
-    background-color: getColor('accent');
+    background-color: getColor('btnActiv');
     color: getColor('textLight');
+  }
+
+  &:hover:last-child,
+  &:focus:last-child {
+    background-color: getColor('secondaryBtnActive');
+    color: getColor('accent');
   }
 
   @include for-size(desktop) {
