убрала нижние марджины

--- a/src/sass/layouts/_components.scss
+++ b/src/sass/layouts/_components.scss
@@ -144,9 +144,8 @@
 
 .component-number {
   min-width: 98px;
-  height: 56px;
-
-  margin: 0;
+  // height: 56px; //ограничить до таблетки возможно
+  margin-bottom: 16px;
 
   font-family: 'Titan One', sans-serif;
   font-size: 36px;
@@ -172,13 +171,13 @@
 
   font-family: 'DM Sans', sans-serif;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 11px;
   line-height: 1.7;
 
   color: $color-header;
   @media screen and (min-width: $tablet) {
     width: 180px;
-    font-size: 14px;
+    font-size: 13px;
     line-height: 1.74;
   }
   @media screen and( min-width:$desktop ) {
