--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,6 +1,6 @@
 .overley {
   position: relative;
-  background: linear-gradient(to bottom, $text-color-hero 84px, $bg-color 84px);
+  background: linear-gradient(to bottom, $text-color-hero 90px, $bg-color 90px);
 }
 
 .contact-item {
@@ -132,6 +132,14 @@
 }
 
 @media screen and (min-width: 768px) {
+  .overley {
+    background: linear-gradient(
+      to bottom,
+      $text-color-hero 60px,
+      $bg-color 60px
+    );
+  }
+
   .contact-list {
     display: flex;
   }
@@ -149,6 +157,13 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .overley {
+    background: linear-gradient(
+      to bottom,
+      $text-color-hero 90px,
+      $bg-color 90px
+    );
+  }
   .contact-item:not(:last-child) {
     margin-right: 30px;
   }
@@ -190,7 +205,7 @@
     left: 0;
     transform: translate(0, -50%);
     width: 100%;
-    height: 333px;
+    // height: 333px;
     background-image: url(../images/section5/img51-desktop.png);
     background-size: cover;
     background-repeat: no-repeat;
