--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -15,6 +15,7 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.15;
+  text-transform: uppercase;
   color: $second-text-color;
   max-width: 234px;
   margin-bottom: 43px;
@@ -35,6 +36,7 @@
 .text-accent {
   font-size: 34px;
   line-height: 1.15;
+  text-transform: uppercase;
   color: $main-text-color;
   margin-top: 17px;
   display: inline-block;
@@ -55,7 +57,7 @@
   margin-bottom: 46px;
 
   .social-icons-svg {
-    fill: $socialmedia-color;
+    fill: $bg-white;
   }
 
   .social-icons-item:not(:last-child) {
@@ -67,12 +69,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: $socialmedia-color;
 
-  &:hover .social-icons-svg,
-  &:focus .social-icons-svg {
-    fill: $main-text-color;
+  &:hover,
+  &:focus {
+    background-color: #d41443;
   }
 }
 
