--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -205,8 +205,9 @@
     left: 0;
     transform: translate(0, -50%);
     width: 100%;
-    // height: 333px;
+
     background-image: url(../images/section5/img51-desktop.png);
+    background-image: url(../images/section5/img51-desktop@2x.png);
     background-size: cover;
     background-repeat: no-repeat;
   }
