Добовляет много чего в много куда

--- a/src/partials/order-form.html
+++ b/src/partials/order-form.html
@@ -1,4 +1,4 @@
-<!--     <form class="form-field">
+    <form class="form-field">
         <div class="select-form">
             <label class="select-text" for="ice">Your favorite Ice-Cream</label>
             <select class="select-ice" id="ice" name="ice">
@@ -45,4 +45,4 @@
         </div>
 
         <button class="form-btn">Order</button>
-    </form> -->
+    </form>
