--- a/src/sass/layouts/_modal-window.scss
+++ b/src/sass/layouts/_modal-window.scss
@@ -6,6 +6,8 @@
   height: 100%;
   background-color: rgba(255, 245, 246, 0.7);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -26,11 +28,12 @@
     url(../images/modal/ice-cream-car.png);
   background-size: contain;
   position: absolute;
+  background-repeat: no-repeat;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
 
-  min-width: 450px;
+  max-width: 250px;
   max-height: 100%;
 
   // background-color: #fff;
@@ -43,7 +46,7 @@
 
   @include for-size(mobile-only) {
     min-width: 100%;
-    max-width: 450px;
+    // max-width: 320px;
   }
 
   @media (max-width: 1199px) {
