--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -31,8 +31,8 @@
 
 .btn:hover,
 .btn:focus {
-  color: $hover-botton-color;
-  background: $hover-botton-bgcolor;
+  color: $text-color-hero;
+  background: $hover-botton-color;
 
   transition-duration: 350ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
