--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,8 +8,10 @@
       <h1 class="page-title">
         ice cream made with <span class="page-title-accent">passion</span>
       </h1>
-      <button class="btn-secondary btn-secondary-hero">Products</button>
-      <button class="btn-third">How it’s made?</button>
+      <button id="products" class="btn-secondary btn-secondary-hero">
+        Products
+      </button>
+      <button id="how-made" class="btn-third">How it’s made?</button>
     </div>
     <div
       class="hero-capacity"
