--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
         <h2 class="footer-title">homemade ice cream made</h2>
         <p class="footer-subtitle">with passion</p>
     </div>
-    <div class="footer-contacts">
+    <div class="footer-contacts" id="contact">
         <ul class="footer-social-list">
             <li class="footer-social-item">
                 <a href="" class="footer-social-link">
