--- a/src/sass/layouts/_section-hero.scss
+++ b/src/sass/layouts/_section-hero.scss
@@ -158,6 +158,7 @@
     letter-spacing: 0.04em;
     text-align: center;
     border-radius: 20px;
+    transition: 250ms;
 
     @include from(desktop) {
       padding: 11px 20px;
