--- a/src/sass/layouts/_section-hero.scss
+++ b/src/sass/layouts/_section-hero.scss
@@ -169,7 +169,12 @@
 
   .anchor-products {
     margin-right: 8px;
+    color: $white-color;
     background: $accent-color;
+
+    @include from(desktop) {
+      margin-right: 15px;
+    }
 
     &:hover {
       background: $button-primary-hover;
