--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -31,7 +31,6 @@
         aria-controls="mobile-menu"
         data-menu-open
         aria-expanded="false"
-      
       >
         <svg
           class="mobile-menu__icon--menu"
@@ -43,7 +42,7 @@
           <use href="./images/sprite.svg#menu"></use>
         </svg>
       </button>
-      <button class="btn-buy " type="button">
+      <button class="btn-buy" type="button" data-open-modal>
         <span class="title">Buy now</span>
         <svg class="btn-buy__icon" width="15" height="15">
           <use
@@ -63,7 +62,6 @@
       aria-controls="mobile-menu"
       data-menu-close
       aria-expanded="false"
-      
     >
       <svg
         class="mobile-menu__icon"
