--- a/src/sass/_shops.scss
+++ b/src/sass/_shops.scss
@@ -1,8 +1,14 @@
-.container {
+.shops-container {
+  left: 50%;
+  top: -84px;
+  transform: translate(-50%, 0);
+  position: absolute;
+  background-color: $footer-bg;
+  
   margin-left: auto;
   margin-right: auto;
   width: 100%;
-
+  
   @media screen and (min-width: 320px) {
     width: 320px;
     padding-left: 20px;
@@ -17,23 +23,60 @@
     width: 768px;
     padding-left: 34px;
     padding-right: 34px;
+    display: flex;
+    flex-wrap: wrap;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 75px;
+    padding-right: 75px;
   }
+}
+
+.shops-bgc {
+
+  position: relative;
 }
 
 .shops-hide {
   display: none;
 }
 
-// .shops-section {
-//   width: 220px;
-//   padding-left: 20px;
-//   padding-right: 20px;
-// }
+
+.shops-section {
+  width: 220px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 43px;
+  padding-bottom: 43px;
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  background: #FFFFFF;
+  box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &:nth-child(-n + 3) {
+      margin-right: 20px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 330px;
+    &:nth-child(-n + 3) {
+      margin-right: 30px;
+    }
+  } 
+}
+
+.shops-section:not(:last-child) {
+  margin-bottom: 20px;
+}
+
 
 .shops-title {
   font-weight: 500;
@@ -45,6 +88,20 @@
 
   background-color: $main-coffee;
   width: 80px;
+  height: 16px;
+  margin-bottom: 25px;
+}
+
+.shops-title-foodtruck {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.86;
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  background-color: $green-color;
+  width: 130px;
   height: 16px;
   margin-bottom: 25px;
 }
@@ -81,7 +138,7 @@
 }
 
 .shops-schedule-1 {
-  padding-bottom: 25px;
+  padding-bottom: 15px;
   padding-top: 25px;
   border-top-width: 1px;
   border-top-style: solid;
@@ -104,4 +161,76 @@
   border-top-style: solid;
   border-top-color: #E1E1E1;
   padding-top: 25px;
+}
+
+.shops-button {
+  display: block;
+  width: 161.45px;
+  height: 44px;
+  left: 79px;
+  top: 6495px;
+  margin-left: auto;
+  margin-right: auto;
+  border-color: transparent;
+
+  border-radius: 22px;
+
+  @media screen and (min-width: 1200px) {
+    width: 198px;
+  }
+}
+
+.shops-button-2 {
+  background-color: #FFFFFF;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #D41443;
+}
+
+.shops-button-2::after {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 10px;
+  background-image: url(../images/svg/icon-button_arrow.svg);
+  margin-left: 8px;
+}
+
+.shops-button-1 {
+  background: #D41342;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3;
+  color: #FFFFFF;
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    margin-bottom: 10px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 15px;
+    margin-left: 181px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 330px;
+  }
+}
+
+.shops-button-1::after {
+  content: "";
+  display: inline-block;
+  width: 8px;
+  height: 10px;
+  background-image: url(../images/svg/shops-arrow.svg);
+  margin-left: 8px;
+  background-repeat: no-repeat;
+}
+
+@media screen and (min-width: 768px) {
+  .shops-buttons {
+    display: flex;
+  
+  }
 }
