--- a/src/partials/shops.html
+++ b/src/partials/shops.html
@@ -1,73 +1,95 @@
-<section class="container">
-  <div class="shops-section">
+<section class="shops-bgc">
+  <div class="shops-container">
     <h1 class="shops-hide">shops</h1>
-    <h2 class="shops-title">CAFE</h2>
-    <ul>
+    <div class="shops-section">
+      <h2 class="shops-title">CAFE</h2>
+      <ul>
+        <li>
+          <h3 class="shops-city">Chicago</h3>
+          <p class="shops-text">Fusce ut velit laoreet, tempu arcu molestie vulputate</p>
+        </li>
+      </ul>
+      <ul class="shops-schedule-1">    
+        <li>
+          <p class="shops-working-days">Monday - Friday</p>
+          <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
+        </li>
+        <li>
+          <p class="shops-working-days">Saturday - Sunday</p>
+          <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
+      <ul class="shops-contacts-container">  
+        <li>
+          <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
+        </li>
+        <li>
+          <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
+        </li>
+      </ul>
+    </div>  
+      
+    <div class="shops-section">
+      <h2 class="shops-title-foodtruck">FOODTRUCK</h2>
+      <ul>
+        <li>
+          <h3 class="shops-city">Los Angeles</h3>
+          <p class="shops-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </li>
+      </ul>
+      <ul class="shops-schedule-1">    
+        <li>
+          <p class="shops-working-days">Monday - Friday</p>
+          <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
+        </li>
+        <li>
+          <p class="shops-working-days">Saturday - Sunday</p>
+          <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
+      <ul class="shops-contacts-container">  
+        <li>
+          <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
+        </li>
+        <li>
+          <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
+        </li>
+      </ul>
+    </div>
+  
+    <div class="shops-section">
+      <h2 class="shops-title">CAFE</h2>
+      <ul>
+        <li>
+          <h3 class="shops-city">New York</h3>
+          <p class="shops-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        </li>
+      </ul>
+      <ul class="shops-schedule-1">    
+        <li>
+          <p class="shops-working-days">Monday - Friday</p>
+          <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
+        </li>
+        <li>
+          <p class="shops-working-days">Saturday - Sunday</p>
+          <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
+        </li>
+      </ul>
+      <ul class="shops-contacts-container">  
+        <li>
+          <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
+        </li>
+        <li>
+          <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
+        </li>
+      </ul>
+    </div>
+    <ul class="shops-buttons">
       <li>
-        <h3 class="shops-city">Chicago</h3>
-        <p class="shops-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+        <button class="shops-button shops-button-1">Our Locations</button>
       </li>
-    </ul>
-    <ul class="shops-schedule-1">    
       <li>
-        <p class="shops-working-days">Monday - Friday</p>
-        <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
-      </li>
-      <li>
-        <p class="shops-working-days">Saturday - Sunday</p>
-        <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
-      </li>
-    </ul>
-    <ul class="shops-contacts-container">  
-      <li>
-        <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-      </li>
-      <li>
-        <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
-      </li>
-    </ul>
-    
-    <h2>FOODTRUCK</h2>
-    <ul>
-      <li>
-        <h3>Los Angeles </h3>
-        <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      </li>
-    </ul>
-    <ul>    
-      <li>
-        <p>Monday - Friday</p>
-        <p>06:00 AM - 10:00 PM</p>
-      </li>
-    </ul>
-    <ul>  
-      <li>
-        <a href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-      </li>
-      <li>
-        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
-      </li>
-    </ul>
-
-    <h2>cafe</h2>
-    <ul>
-      <li>
-        <h3>New York</h3>
-        <p>Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
-      </li>
-    </ul>
-    <ul>    
-      <li>
-        <p>Monday - Friday</p>
-        <p>06:00 AM - 10:00 PM</p>
-      </li>
-    </ul>
-    <ul>  
-      <li>
-        <a href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
-      </li>
-      <li>
-        <a href="mailto:noreply@envato.com">noreply@envato.com</a>
+        <button class="shops-button shops-button-2">Franchise</button>
       </li>
     </ul>
   </div>
