--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="food-point">
                     <ul>
-                        <li>
+                        <li class="food-point-item">
                             <p class="food-point-count">16</p>
                             <span class="food-point-kind">cafes</span>
                         </li>
