--- a/src/sass/layouts/_section-hero.scss
+++ b/src/sass/layouts/_section-hero.scss
@@ -208,6 +208,17 @@
     line-height: 1.15;
   }
 }
+
+.food-point-item {
+  height: 42px;
+  margin-bottom: 14px;
+
+  @include from(desktop) {
+    height: 73px;
+    margin-bottom: 18px;
+  }
+}
+
 .food-point-count {
   position: relative;
   z-index: 1;
@@ -239,6 +250,12 @@
   font-family: DM Sans;
   font-size: 8px;
   line-height: 1.25;
+
+  @include from(desktop) {
+    margin-bottom: 2px;
+    font-size: 14px;
+    line-height: 1.28;
+  }
 }
 
 .eco-info {
