додала aria-label

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -18,7 +18,7 @@
                     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> 
                 </ul>
                 <div class="btn-container">
-                    <button type="button" class="menu-btn open-btn" data-menu-open>
+                    <button type="button" class="menu-btn open-btn" aria-label="menu-switcher" data-menu-open>
                         <svg class="open-icon">
                             <use href="././images/icons/sprite.svg#open-icon"></use>
                         </svg>
@@ -32,7 +32,7 @@
                 </div>
                 
                 <div class="mobile-menu" data-menu>
-                    <button type="button" class="menu-btn close-btn" data-menu-close>
+                    <button type="button" class="menu-btn close-btn" aria-label="menu-switcher-close" data-menu-close>
                         <svg class="cross-icon">
                             <use href="././images/icons/sprite.svg#close-icon"></use>
                         </svg>
