--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -269,17 +269,20 @@
     font-weight: 700;
     line-height: 1.2857;
 
-    
+    cursor: pointer;
+
     color: $text-color-hero;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current,
-.nav-link:hover,
-.nav-limk:focus {
+.nav-limk:focus,
+.nav-link:hover {
     color: $title-text-color;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .site-nav {
     display: none;
