--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -483,17 +483,22 @@ h6 {
   font-family: DM Sans;
   font-weight: 700;
   line-height: 1.2857;
+  cursor: pointer;
   color: #ffffff;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current,
-.nav-link:hover,
-.nav-limk:focus {
+.nav-limk:focus span,
+.nav-link:hover span {
   color: #d41443;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-limk:focus-within span {
+  color: #d41443;
 }
 
 .site-nav {
