--- a/src/partials/burger.html
+++ b/src/partials/burger.html
@@ -1,13 +1,7 @@
-<div class="mobile-container" data-menu>
-    <!-- <button type="button" class="menu-button-close is-open">
-        <svg class="icon-close" width="40" height="40">
-            <use xlink:href="./images/sprite.svg#icon-close40px">
-            </use>
-        </svg> </button> -->
-        
+<div class="mobile-container" data-menu> 
     <button type="button" class="btn-burger">
         <svg class="btn-icon" width="10" height="10">
-            <use xlink:href="./images/sprite.svg#icon-vector">
+            <use xlink:href="./images/sprite.svg#icon-cheveron-right">
             </use>
         </svg>Buy now</button>
         
@@ -18,5 +12,6 @@
         <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
         <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
     </ul>
-    
+
+    </button>
 </div>
