Фиксит стили + убирает outline, который прописан в header

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,5 +1,5 @@
 <section class="product-section">
-  <div class="container products-container">
+  <div class="container">
     <h2 class="product-section-title">
       <span class="natural-text">100% natural</span>products
     </h2>
