--- a/src/sass/products/_products-section.scss
+++ b/src/sass/products/_products-section.scss
@@ -11,16 +11,6 @@
     padding-bottom: 119px;
   }
 }
-// .products-container {
-//   @include for-size(tablet) {
-//     padding-left: 34px;
-//     padding-right: 34px;
-//   }
-//   @include for-size(desktop) {
-//     padding-left: 75px;
-//     padding-right: 75px;
-//   }
-// }
 
 .product-section-title {
   display: flex;
@@ -40,7 +30,7 @@
   @include for-size(tablet) {
     margin-bottom: 150px;
     font-size: 48px;
-    line-height: 1.46;
+    line-height: 1.15;
   }
   @include for-size(desktop) {
     margin-bottom: 259px;
@@ -58,11 +48,12 @@
 
   @include for-size(tablet) {
     font-size: 26px;
-    line-height: 1.54;
+    line-height: 1.15;
   }
   @include for-size(desktop) {
     font-size: 30px;
     line-height: 1.33;
+    letter-spacing: 0.04em;
   }
 }
 
@@ -91,7 +82,7 @@
     margin-right: auto;
   }
   @include for-size(tablet) {
-    margin: 5px;
+    margin: 10px;
     padding: 152px 11px 40px;
     flex-basis: calc((100%-3 * 20) / 3);
   }
@@ -120,13 +111,13 @@
 
 .products-image {
   position: absolute;
-  top: -114px;
+  top: -113px;
   left: 50%;
   transform: translateX(-50%);
   min-width: 249px;
 
   @include for-size(tablet) {
-    top: -102px;
+    top: -104px;
     min-width: 220px;
   }
   @include for-size(desktop) {
@@ -207,8 +198,7 @@
   background-color: getColor('textLight');
   fill: getColor('arrowColor');
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms $cubic, background-color 250ms $cubic;
 
   &:hover,
   &:focus {
